# orcl_fama_french

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_data_exploration.ipynb
outputs/: ff3.csv  ff3_rolling.csv  ff5.csv  ff5_rolling.csv  static_er_rolling_er.csv  static_er_rolling_er.html  summary.csv  summary.html
src/orcl_fama_french/: data_loader.py  factor_models.py  rolling_analysis.py  visualisation.py
