[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "orcl_fama_french"
version = "0.1.0"
description = "Oracle Fama French (3 and 5) factors analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"pandas>=2.0",
"numpy>=1.24",
"matplotlib>=3.7",
"seaborn>=0.12",
"yfinance>=0.2.32",
"tabulate>=0.9.0",
"statsmodels>=0.14.5",
"jinja2>=3.1.6"
]
[tool.setuptools.packages.find]
where = ["src"]
